cfn_benchmark/cfn_templates/Tianyi2__IRIS/data/cloudformation_collected_templates_new/template_09463_303809578.yaml
Resources:
  Vpc8378EB38:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: sample-flask-fargate-api-stack/Vpc
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/Resource
  VpcPublicSubnet1Subnet5C2D37C4:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId:
        Ref: Vpc8378EB38
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: sample-flask-fargate-api-stack/Vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/PublicSubnet1/Subnet
  VpcPublicSubnet1RouteTable6C95E38E:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      Tags:
        - Key: Name
          Value: sample-flask-fargate-api-stack/Vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/PublicSubnet1/RouteTable
  VpcPublicSubnet1RouteTableAssociation97140677:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcPublicSubnet1RouteTable6C95E38E
      SubnetId:
        Ref: VpcPublicSubnet1Subnet5C2D37C4
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/PublicSubnet1/RouteTableAssociation
  VpcPublicSubnet1DefaultRoute3DA9E72A:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VpcPublicSubnet1RouteTable6C95E38E
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VpcIGWD7BA715C
    DependsOn:
      - VpcVPCGWBF912B6E
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/PublicSubnet1/DefaultRoute
  VpcPublicSubnet1EIPD7E02669:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: sample-flask-fargate-api-stack/Vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/PublicSubnet1/EIP
  VpcPublicSubnet1NATGateway4D7517AA:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - VpcPublicSubnet1EIPD7E02669
          - AllocationId
      SubnetId:
        Ref: VpcPublicSubnet1Subnet5C2D37C4
      Tags:
        - Key: Name
          Value: sample-flask-fargate-api-stack/Vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/PublicSubnet1/NATGateway
  VpcPublicSubnet2Subnet691E08A3:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId:
        Ref: Vpc8378EB38
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: sample-flask-fargate-api-stack/Vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/PublicSubnet2/Subnet
  VpcPublicSubnet2RouteTable94F7E489:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      Tags:
        - Key: Name
          Value: sample-flask-fargate-api-stack/Vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/PublicSubnet2/RouteTable
  VpcPublicSubnet2RouteTableAssociationDD5762D8:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcPublicSubnet2RouteTable94F7E489
      SubnetId:
        Ref: VpcPublicSubnet2Subnet691E08A3
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/PublicSubnet2/RouteTableAssociation
  VpcPublicSubnet2DefaultRoute97F91067:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VpcPublicSubnet2RouteTable94F7E489
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VpcIGWD7BA715C
    DependsOn:
      - VpcVPCGWBF912B6E
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/PublicSubnet2/DefaultRoute
  VpcPrivateSubnet1Subnet536B997A:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId:
        Ref: Vpc8378EB38
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: sample-flask-fargate-api-stack/Vpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/PrivateSubnet1/Subnet
  VpcPrivateSubnet1RouteTableB2C5B500:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      Tags:
        - Key: Name
          Value: sample-flask-fargate-api-stack/Vpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/PrivateSubnet1/RouteTable
  VpcPrivateSubnet1RouteTableAssociation70C59FA6:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcPrivateSubnet1RouteTableB2C5B500
      SubnetId:
        Ref: VpcPrivateSubnet1Subnet536B997A
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/PrivateSubnet1/RouteTableAssociation
  VpcPrivateSubnet1DefaultRouteBE02A9ED:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VpcPrivateSubnet1RouteTableB2C5B500
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: VpcPublicSubnet1NATGateway4D7517AA
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/PrivateSubnet1/DefaultRoute
  VpcPrivateSubnet2Subnet3788AAA1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId:
        Ref: Vpc8378EB38
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: sample-flask-fargate-api-stack/Vpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/PrivateSubnet2/Subnet
  VpcPrivateSubnet2RouteTableA678073B:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      Tags:
        - Key: Name
          Value: sample-flask-fargate-api-stack/Vpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/PrivateSubnet2/RouteTable
  VpcPrivateSubnet2RouteTableAssociationA89CAD56:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcPrivateSubnet2RouteTableA678073B
      SubnetId:
        Ref: VpcPrivateSubnet2Subnet3788AAA1
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/PrivateSubnet2/RouteTableAssociation
  VpcPrivateSubnet2DefaultRoute060D2087:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VpcPrivateSubnet2RouteTableA678073B
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: VpcPublicSubnet1NATGateway4D7517AA
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/PrivateSubnet2/DefaultRoute
  VpcIGWD7BA715C:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: sample-flask-fargate-api-stack/Vpc
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/IGW
  VpcVPCGWBF912B6E:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      InternetGatewayId:
        Ref: VpcIGWD7BA715C
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Vpc/VPCGW
  serviceLBD84AC665:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
      Scheme: internal
      SecurityGroups:
        - Fn::GetAtt:
            - serviceLBSecurityGroup7C51B15A
            - GroupId
      Subnets:
        - Ref: VpcPrivateSubnet1Subnet536B997A
        - Ref: VpcPrivateSubnet2Subnet3788AAA1
      Type: application
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/service/LB/Resource
  serviceLBSecurityGroup7C51B15A:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Automatically created Security Group for ELB sampleflaskfargateapistackserviceLB293CB39C
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 80
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId:
        Ref: Vpc8378EB38
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/service/LB/SecurityGroup/Resource
  serviceLBSecurityGrouptosampleflaskfargateapistackserviceServiceSecurityGroup1DF8DC5B50004A29B5DE:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId:
        Fn::GetAtt:
          - serviceLBSecurityGroup7C51B15A
          - GroupId
      IpProtocol: tcp
      Description: Load balancer to target
      DestinationSecurityGroupId:
        Fn::GetAtt:
          - serviceServiceSecurityGroup94D21C42
          - GroupId
      FromPort: 5000
      ToPort: 5000
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/service/LB/SecurityGroup/to sampleflaskfargateapistackserviceServiceSecurityGroup1DF8DC5B:5000
  serviceLBPublicListener924DC596:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: serviceLBPublicListenerECSGroupD194ED9A
          Type: forward
      LoadBalancerArn:
        Ref: serviceLBD84AC665
      Port: 80
      Protocol: HTTP
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/service/LB/PublicListener/Resource
  serviceLBPublicListenerECSGroupD194ED9A:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckPath: /health
      HealthCheckPort: "5000"
      Port: 80
      Protocol: HTTP
      TargetType: ip
      VpcId:
        Ref: Vpc8378EB38
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/service/LB/PublicListener/ECSGroup/Resource
  serviceTaskDefTaskRole43CA7BBB:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/service/TaskDef/TaskRole/Resource
  serviceTaskDefTaskRoleDefaultPolicyC429502E:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - s3:Get*
              - s3:List*
              - s3:Describe*
              - s3:PutObject
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      PolicyName: serviceTaskDefTaskRoleDefaultPolicyC429502E
      Roles:
        - Ref: serviceTaskDefTaskRole43CA7BBB
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/service/TaskDef/TaskRole/DefaultPolicy/Resource
  serviceTaskDef7C4986C7:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Essential: true
          Image:
            Fn::Join:
              - ""
              - - Ref: AWS::AccountId
                - .dkr.ecr.
                - Ref: AWS::Region
                - "."
                - Ref: AWS::URLSuffix
                - /acme/demo/apigw-ecs:5263b27d7c6f4ef7ec4290ee4a71092f5d9ba33cd52805124cedc7bdfbb81783
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: serviceTaskDefflaskapiLogGroup70BF505B
              awslogs-stream-prefix: service
              awslogs-region:
                Ref: AWS::Region
          Name: flask-api
          PortMappings:
            - ContainerPort: 5000
              Protocol: tcp
      Cpu: "512"
      ExecutionRoleArn:
        Fn::GetAtt:
          - serviceTaskDefExecutionRole39FD5935
          - Arn
      Family: sampleflaskfargateapistackserviceTaskDefCC533D81
      Memory: "1024"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - serviceTaskDefTaskRole43CA7BBB
          - Arn
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/service/TaskDef/Resource
  serviceTaskDefflaskapiLogGroup70BF505B:
    Type: AWS::Logs::LogGroup
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/service/TaskDef/flask-api/LogGroup/Resource
  serviceTaskDefExecutionRole39FD5935:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/service/TaskDef/ExecutionRole/Resource
  serviceTaskDefExecutionRoleDefaultPolicy6375C3DF:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":ecr:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :repository/acme/demo/apigw-ecs
          - Action: ecr:GetAuthorizationToken
            Effect: Allow
            Resource: "*"
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - serviceTaskDefflaskapiLogGroup70BF505B
                - Arn
        Version: "2012-10-17"
      PolicyName: serviceTaskDefExecutionRoleDefaultPolicy6375C3DF
      Roles:
        - Ref: serviceTaskDefExecutionRole39FD5935
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/service/TaskDef/ExecutionRole/DefaultPolicy/Resource
  serviceService8587F09F:
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: EcsDefaultClusterMnL3mNNYNVpc18E0451A
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 2
      EnableECSManagedTags: false
      HealthCheckGracePeriodSeconds: 60
      LaunchType: FARGATE
      LoadBalancers:
        - ContainerName: flask-api
          ContainerPort: 5000
          TargetGroupArn:
            Ref: serviceLBPublicListenerECSGroupD194ED9A
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - Fn::GetAtt:
                - serviceServiceSecurityGroup94D21C42
                - GroupId
          Subnets:
            - Ref: VpcPrivateSubnet1Subnet536B997A
            - Ref: VpcPrivateSubnet2Subnet3788AAA1
      TaskDefinition:
        Ref: serviceTaskDef7C4986C7
    DependsOn:
      - serviceLBPublicListenerECSGroupD194ED9A
      - serviceLBPublicListener924DC596
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/service/Service/Service
  serviceServiceSecurityGroup94D21C42:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: sample-flask-fargate-api-stack/service/Service/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: Vpc8378EB38
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/service/Service/SecurityGroup/Resource
  serviceServiceSecurityGroupfromsampleflaskfargateapistackserviceLBSecurityGroup6EEF0177500048F12D91:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: Load balancer to target
      FromPort: 5000
      GroupId:
        Fn::GetAtt:
          - serviceServiceSecurityGroup94D21C42
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - serviceLBSecurityGroup7C51B15A
          - GroupId
      ToPort: 5000
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/service/Service/SecurityGroup/from sampleflaskfargateapistackserviceLBSecurityGroup6EEF0177:5000
  EcsDefaultClusterMnL3mNNYNVpc18E0451A:
    Type: AWS::ECS::Cluster
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/EcsDefaultClusterMnL3mNNYNVpc/Resource
  HttpVpcLink:
    Type: AWS::ApiGatewayV2::VpcLink
    Properties:
      Name: Sample Flask Fargate VPC Link
      SubnetIds:
        - Ref: VpcPrivateSubnet1Subnet536B997A
        - Ref: VpcPrivateSubnet2Subnet3788AAA1
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/HttpVpcLink
  HttpApiGateway9C0C92DC:
    Type: AWS::ApiGatewayV2::Api
    Properties:
      Name: HttpApiGateway
      ProtocolType: HTTP
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/HttpApiGateway/Resource
  HttpApiGatewayDefaultStageA78B4F27:
    Type: AWS::ApiGatewayV2::Stage
    Properties:
      ApiId:
        Ref: HttpApiGateway9C0C92DC
      StageName: $default
      AutoDeploy: true
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/HttpApiGateway/DefaultStage/Resource
  HttpApiGatewayIntegration:
    Type: AWS::ApiGatewayV2::Integration
    Properties:
      ApiId:
        Ref: HttpApiGateway9C0C92DC
      IntegrationType: HTTP_PROXY
      ConnectionId:
        Ref: HttpVpcLink
      ConnectionType: VPC_LINK
      Description: Sample Flask Fargate API Integration
      IntegrationMethod: ANY
      IntegrationUri:
        Ref: serviceLBPublicListener924DC596
      PayloadFormatVersion: "1.0"
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/HttpApiGatewayIntegration
  Route:
    Type: AWS::ApiGatewayV2::Route
    Properties:
      ApiId:
        Ref: HttpApiGateway9C0C92DC
      RouteKey: ANY /{proxy+}
      Target:
        Fn::Join:
          - ""
          - - integrations/
            - Ref: HttpApiGatewayIntegration
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/Route
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.68.0,@aws-cdk/aws-apigatewayv2=1.68.0,@aws-cdk/aws-applicationautoscaling=1.68.0,@aws-cdk/aws-autoscaling=1.68.0,@aws-cdk/aws-autoscaling-common=1.68.0,@aws-cdk/aws-autoscaling-hooktargets=1.68.0,@aws-cdk/aws-certificatemanager=1.68.0,@aws-cdk/aws-cloudwatch=1.68.0,@aws-cdk/aws-codeguruprofiler=1.68.0,@aws-cdk/aws-ec2=1.68.0,@aws-cdk/aws-ecr=1.68.0,@aws-cdk/aws-ecr-assets=1.68.0,@aws-cdk/aws-ecs=1.68.0,@aws-cdk/aws-ecs-patterns=1.68.0,@aws-cdk/aws [...]
    Metadata:
      aws:cdk:path: sample-flask-fargate-api-stack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Outputs:
  serviceLoadBalancerDNS7A375B34:
    Value:
      Fn::GetAtt:
        - serviceLBD84AC665
        - DNSName
  serviceServiceURLD17005C1:
    Value:
      Fn::Join:
        - ""
        - - http://
          - Fn::GetAtt:
              - serviceLBD84AC665
              - DNSName
  APIUrl:
    Value:
      Fn::Join:
        - ""
        - - https://
          - Ref: HttpApiGateway9C0C92DC
          - .execute-api.
          - Ref: AWS::Region
          - "."
          - Ref: AWS::URLSuffix
          - /
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
